Fix z-index of flag

--- a/src/components/style.css
+++ b/src/components/style.css
@@ -183,6 +183,10 @@
     border-radius: 4px !important;
 }
 
+.react-tel-input .selected-flag {
+    z-index: 4 !important;
+}
+
 .map-holder {
     background:url(../images/loader.gif) center center no-repeat;
 }
